# smartsoap

./: README.md  pyproject.toml
smartsoap/: __init__.py  client.py
tests/: test_client.py
