[tool.poetry]
name = "smartsoap"
version = "0.1.0"
description = ""
authors = ["Makcime"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zeep = "^4.2.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
